[package]
name = "territory_td"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = "0.8.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
# https://crates.io/crates/bevy_tweening
# https://crates.io/crates/bevy_prototype_lyon
# Can I draw quarter circles?
# https://crates.io/crates/bevy_hanabi